[package]
name = "synacor-vm"
version = "0.1.0"
authors = ["Vest <Vest@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "coins"
path = "src/coins.rs"
test = false
bench = false
required-features = ["coins"]

[dependencies]
log = "0.4.13"
env_logger = "0.8.2"
itertools = { version = "0.10.0", optional = true }

[features]
coins = ["itertools"]
